--- a/projects/bootstrapcarouselmaker.html
+++ b/projects/bootstrapcarouselmaker.html
@@ -1,157 +1,184 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Carousel Generator</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Bootstrap Carousel Generator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <style>
+        textarea {
+            border-radius: 12px;
+        }
+
+        input {
+            border-radius: 3px;
+            border-width: 1px;
+        }
+        .adjustment {
+            margin-right: 2vh;
+        }
+        .button {
+            border-width: 1px;
+            border-radius: 3px;
+        }
+    </style>
 </head>
 <body>
 
 <div class="container p-5">
-  <div class="row align-items-center justify-content-center">
-    <h1 style="text-align:center;">Bootstrap carousel generator</h1>
-    <div class="col-sm-12 col-md-10 col-lg-8">
-      <div class="row">
-        <textarea class="my-2" placeholder="File names" id="namesIn" rows="10"></textarea>
-      </div>
-      <form id="form" action="generate.js" target="_blank" method="post" autocomplete="off">
-        <div class="row">
-          <div class="col-sm-12 col-md-3">
-            <p>Transition</p>
-            <div class="d-block">
-              <input id="transitionnone" type="radio" name="transition" value="carousel">
-              <label for="transitionnone">None</label>
+    <div class="row align-items-center justify-content-center">
+        <h1 style="text-align:center;">Bootstrap carousel generator</h1>
+        <div class="col-sm-12 col-md-10">
+            <div class="row">
+                <textarea class="my-2" placeholder="File names" id="namesIn" rows="10"></textarea>
             </div>
-            <div class="d-block">
-              <input id="transitionslide" type="radio" name="transition" value="carousel slide" checked="checked">
-              <label for="transitionslide">Slide</label>
-            </div>
-            <div class="d-block">
-              <input id="transitionfade" type="radio" name="transition" value="carousel slide carousel-fade">
-              <label for="transitionfade">Fade</label>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-3">
-            <p>Autoscroll</p>
-            <div class="d-block">
-              <input type="radio" id="autoscrollnone" name="autoscroll" value="">
-              <label for="autoscrollnone">None</label>
-            </div>
-            <div class="d-block">
-              <input type="radio" id="autoscrollauto" name="autoscroll" value='data-bs-ride="carousel"'>
-              <label for="autoscrollauto">Auto</label>
-            </div>
-            <div class="d-block">
-              <input type="radio" id="autoscrollclick" name="autoscroll" value='data-bs-ride="true"' checked="checked">
-              <label for="autoscrollclick">On Click</label>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 row mb-2">
-            <p>Options</p>
-            <div class="col-sm-12 col-md-6">
-              <div class="group">
-                <input type="checkbox" id="lazyloading" name="lazyloading" value=1>
-                <label for="lazyloading">Lazy Loading</label>
-              </div>
-              <div class="group">
-                <input type="checkbox" id="indicators" name="indicators" value=1>
-                <label for="indicators">Indicators</label>
-              </div>
-              <div class="group">
-                <input type="checkbox" id="compact" name="compact" value=1>
-                <label for="compact">Compact Code</label>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6">
-              <div class="group">
-                <input type="checkbox" id="swipes" name="disableTouchSwiping" value="1">
-                <label for="swipes">Disable Touch Swiping</label>
-              </div>
-              <div class="group">
-                <input type="checkbox" id="nocontrols" name="nocontrols" value="1">
-                <label for="nocontrols">No Controls</label>
-              </div>
-            </div>
-          </div>
-          <div class="col-12">
-            <input name="filepath" type="text" id="filepath" placeholder="Picture folder">
-            <input name="carouselName" type="text" id="carouselName" placeholder="Carousel name">
-          </div>
+            <form id="form" action="generate.js" target="_blank" method="post" autocomplete="off">
+                <div class="row">
+                    <div class="col-sm-12 col-md-3">
+                        <strong>Transition</strong>
+                        <div class="d-block">
+                            <input id="transitionnone" type="radio" name="transition" value="carousel">
+                            <label for="transitionnone">None</label>
+                        </div>
+                        <div class="d-block">
+                            <input id="transitionslide" type="radio" name="transition" value="carousel slide"
+                                   checked="checked">
+                            <label for="transitionslide">Slide</label>
+                        </div>
+                        <div class="d-block">
+                            <input id="transitionfade" type="radio" name="transition"
+                                   value="carousel slide carousel-fade">
+                            <label for="transitionfade">Fade</label>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                        <strong>Autoscroll</strong>
+                        <div class="d-block">
+                            <input type="radio" id="autoscrollnone" name="autoscroll" value="">
+                            <label for="autoscrollnone">None</label>
+                        </div>
+                        <div class="d-block">
+                            <input type="radio" id="autoscrollauto" name="autoscroll" value='data-bs-ride="carousel"'>
+                            <label for="autoscrollauto">Auto</label>
+                        </div>
+                        <div class="d-block">
+                            <input type="radio" id="autoscrollclick" name="autoscroll" value='data-bs-ride="true"'
+                                   checked="checked">
+                            <label for="autoscrollclick">On Click</label>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 row mb-2">
+                        <strong>Options</strong>
+                        <div class="col-sm-12 col-md-6">
+                            <div class="group">
+                                <input type="checkbox" id="lazyloading" name="lazyloading" value=1>
+                                <label for="lazyloading">Lazy Loading</label>
+                            </div>
+                            <div class="group">
+                                <input type="checkbox" id="indicators" name="indicators" value=1>
+                                <label for="indicators">Indicators</label>
+                            </div>
+                            <div class="group">
+                                <input type="checkbox" id="compact" name="compact" value=1>
+                                <label for="compact">Compact Code</label>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <div class="group">
+                                <input type="checkbox" id="swipes" name="disableTouchSwiping" value="1">
+                                <label for="swipes">Disable Touch Swiping</label>
+                            </div>
+                            <div class="group">
+                                <input type="checkbox" id="nocontrols" name="nocontrols" value="1">
+                                <label for="nocontrols">No Controls</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-9 row adjustment">
+                                <input name="filepath" type="text" id="filepath" placeholder="Picture folder">
+                            </div>
+                            <div class="col-3 row">
+                                <input name="carouselName" type="text" id="carouselName" placeholder="Carousel name">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <input class="mt-2" type="submit">
+                <button type="button" class="button" onclick="copyText()">Copy</button>
+                <input type="reset">
+            </form>
         </div>
-        <input class="mt-2" type="submit">
-        <input type="reset">
-        <button type="button" onclick="copyText()">Copy</button>
-      </form>
-    </div>
 
-    <pre id="log"></pre>
-  </div>
+        <pre id="log"></pre>
+    </div>
 </div>
 </div>
 
 <script>
-  const form = document.getElementById("form");
-  const log = document.getElementById("log");
+    const form = document.getElementById("form");
+    const log = document.getElementById("log");
 
-  form.addEventListener(
-    "submit",
-    (event) => {
-      let properties = {
-        filepath: "",
-        carouselName: String(Math.round((Math.random() * Math.random() * 10 ** 16))),
-        transition: "slide",
-        autoscroll: "data-bs-ride='true'",
-        lazyloading: "",
-        indicators: 0,
-        compact: 0,
-        disabletouch: "",
-        nocontrols: 0
-      }
-      const data = new FormData(form);
-      let output = "";
-      for (const entry of data) {
-        output = `${output}${entry[0]}=${entry[1]}\r`;
-        if (entry[0] === "transition") {
-          properties.transition = entry[1]
-        }
-        if (entry[0] === "autoscroll") {
-          properties.autoscroll = entry[1]
-        }
-        if (entry[0] === "lazyloading") {
-          properties.lazyloading = "loading=\"lazy\""
-        }
-        if (entry[0] === "indicators") {
-          properties.indicators = 1
-        }
-        if (entry[0] === "compact") {
-          properties.compact = 1
-        }
-        if (entry[0] === "disableTouchSwiping") {
-          properties.disabletouch = "data-bs-touch='false'"
-        }
-        if (entry[0] === "nocontrols") {
-          properties.nocontrols = 1
-          properties.autoscroll = "data-bs-ride='carousel"
-        }
-        if (entry[0] === "filepath" && entry[1] !== "") {
-          properties.filepath = entry[1] + "/"
-        }
-        if (entry[0] === "carouselName" && entry[1] !== "") {
-          properties.carouselName = entry[1]
-        }
-      }
-      log.innerText = JSON.stringify(properties);
-      event.preventDefault();
-      let innards = ""
-      let names = document.getElementById("namesIn").value.split("\n")
-      for (i in names) {
-        innards += `<div class="carousel-item">
+    form.addEventListener(
+        "submit",
+        (event) => {
+            let properties = {
+                filepath: "",
+                carouselName: String(Math.round((Math.random() * Math.random() * 10 ** 16))),
+                transition: "slide",
+                autoscroll: "data-bs-ride='true'",
+                lazyloading: "",
+                indicators: 0,
+                compact: 0,
+                disabletouch: "",
+                nocontrols: 0
+            }
+            const data = new FormData(form);
+            let output = "";
+            for (const entry of data) {
+                output = `${output}${entry[0]}=${entry[1]}\r`;
+                if (entry[0] === "transition") {
+                    properties.transition = entry[1]
+                }
+                if (entry[0] === "autoscroll") {
+                    properties.autoscroll = entry[1]
+                }
+                if (entry[0] === "lazyloading") {
+                    properties.lazyloading = "loading=\"lazy\""
+                }
+                if (entry[0] === "indicators") {
+                    properties.indicators = 1
+                }
+                if (entry[0] === "compact") {
+                    properties.compact = 1
+                }
+                if (entry[0] === "disableTouchSwiping") {
+                    properties.disabletouch = "data-bs-touch='false'"
+                }
+                if (entry[0] === "nocontrols") {
+                    properties.nocontrols = 1
+                    properties.autoscroll = "data-bs-ride='carousel"
+                }
+                if (entry[0] === "filepath" && entry[1] !== "") {
+                    properties.filepath = entry[1] + "/"
+                }
+                if (entry[0] === "carouselName" && entry[1] !== "") {
+                    properties.carouselName = entry[1]
+                }
+            }
+            log.innerText = JSON.stringify(properties);
+            event.preventDefault();
+            let innards = ""
+            let names = document.getElementById("namesIn").value.split("\n")
+            for (i in names) {
+                innards += `<div class="carousel-item">
   <img src="${properties.filepath}${names[i]}" class="d-block w-100" alt="image from ${properties.filepath}" ${properties.lazyloading}>
 </div>
     `
-      }
-      if (properties.disabletouch !== "data-bs-touch='false") {
-        controls = `
+            }
+            if (properties.disabletouch !== "data-bs-touch='false") {
+                controls = `
         <button class="carousel-control-prev" type="button" data-bs-target="#${properties.carouselName}"
                                data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -161,8 +188,8 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>`
-      }
-      codeOut = (`
+            }
+            codeOut = (`
 <div id="${properties.carouselName}" class="${properties.transition}" ${properties.disabletouch} ${properties.autoscroll}>
   <div class="carousel-inner">
     ${innards}
@@ -170,19 +197,19 @@
   ${controls}
 </div>
   `).replace('class="carousel-item"', 'class="carousel-item active"').trim()
-      if (properties.compact === 1) {
-        codeOut = codeOut.replace(/[\n\r\t\s]+/g, ' ').trim()
-      }
-      document.getElementById("namesIn").value = codeOut
-    },
-    false
-  );
+            if (properties.compact === 1) {
+                codeOut = codeOut.replace(/[\n\r\t\s]+/g, ' ').trim()
+            }
+            document.getElementById("namesIn").value = codeOut
+        },
+        false
+    );
 
-  function copyText() {
-    document.getElementById("namesIn").select()
-    document.getElementById("namesIn").setSelectionRange(0, 99999)
-    navigator.clipboard.writeText(document.getElementById("namesIn").value)
-  }
+    function copyText() {
+        document.getElementById("namesIn").select()
+        document.getElementById("namesIn").setSelectionRange(0, 99999)
+        navigator.clipboard.writeText(document.getElementById("namesIn").value)
+    }
 
 </script>
 
