--- a/projects/tasQer2/index.html
+++ b/projects/tasQer2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>tasQer 2.0</title>
-    <link rel="icon" type="image/x-icon" href="ms.png">
+    <link rel="icon" type="image/x-icon" href="favico.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="styles2.css" rel="stylesheet">
@@ -18,11 +18,8 @@
 <div class="p-5">
     <div class="row align-items-center justify-content-center">
         <div class="col-lg-6 col-md-10 col-sm-12 container shadow-lg my-5 nopadding">
-            <div class="group row">
-                <h1 class="col-10 pb-2">tasQer</h1>
-                <span class="col-2 material-icons-sharp">close</span>
-            </div>
-            <div class="row" style="background-color: #e1e1e1; padding-top: 1%">
+            <h1 class="pb-2" style="color: white">tasQer</h1>
+            <div class="row" style="border-color: #FFFFFF; border-style:solid ;padding-top: 1%">
                 <div class="col-3">
                     <h4 class="d-inline" id="taskTotal">0</h4><h4 class="d-inline"> Tasks</h4>
                 </div>
