--- a/projects/tasQer/index.html
+++ b/projects/tasQer/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
 </head>
-<body>
+<body onload="listenerEnter()">
 <div class="p-5">
     <div class="row align-items-center justify-content-center">
         <div class="col-lg-6 col-md-10 col-sm-12 container shadow-lg my-5 nopadding">
@@ -47,7 +47,7 @@
                 <div class="col-2 row"><input placeholder="time" id="timeIn" type="number" required="required" size="4">
                 </div>
                 <div class="col-1 row">
-                    <button type="button" onclick="addTask()"><span class="material-icons-sharp">add</span></button>
+                    <button id="addTask" type="button" onclick="addTask()"><span class="material-icons-sharp">add</span></button>
                 </div>
                 <div class="col-1 row">
                     <button type="button" onclick="resetTasks()"><span class="material-icons-sharp">restart_alt</span></button>
